Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I75a17e722eaae9f2f3d49ae00346ca51015011db

--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -4520,8 +4520,8 @@
     <string name="mobile_data_settings_summary" msgid="7323978798199919063">"Πρόσβαση σε δεδομένα μέσω δικτύου κινητής τηλεφωνίας"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"Το τηλέφωνο θα κάνει αυτόματα εναλλαγή σε αυτή την εταιρεία κινητής τηλεφωνίας όταν βρίσκεται εντός εμβέλειας"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"Δεν υπάρχει διαθέσιμη SIM."</string>
-    <string name="calls_preference" msgid="2166481296066890129">"Προτίμηση κλήσεων"</string>
-    <string name="sms_preference" msgid="7742964962568219351">"Προτίμηση SMS"</string>
+    <string name="calls_preference" msgid="2166481296066890129">"Προτίμηση για κλήσεις"</string>
+    <string name="sms_preference" msgid="7742964962568219351">"Προτίμηση για SMS"</string>
     <string name="calls_and_sms_ask_every_time" msgid="3178743088737726677">"Ερώτηση κάθε φορά"</string>
     <string name="mobile_network_summary_add_a_network" msgid="9079866102827526779">"Προσθήκη δικτύου"</string>
     <string name="default_for_calls" msgid="2788950217176988034">"Προεπιλογή για κλήσεις"</string>
