--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -748,7 +748,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> સશક્ત પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવી પૅટર્ન, પિન અથવા પાસવર્ડની ભલામણ કરે છે અને તેના વિના અપેક્ષા મુજબ કાર્ય ન કરે તેમ બની શકે છે"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા સ્ક્રીન લૉકની ભલામણ કરે છે"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> નવા સ્ક્રીન લૉકનો સુઝાવ આપે છે"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"ફરી પ્રયાસ કરો. <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g> માંથી <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> પ્રયત્ન."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"તમારો ડેટા ડિલીટ કરવામાં આવશે"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"જો તમે આગલા પ્રયત્નમાં ખોટી પૅટર્ન દાખલ કરશો, તો આ ઉપકરણનો ડેટા કાઢી નાખવામાં આવશે"</string>
