--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -3064,7 +3064,7 @@
     <string name="sim_signal_strength" msgid="6351052821700294501">"‏<xliff:g id="DBM">%1$d</xliff:g> dBm ‏<xliff:g id="ASU">%2$d</xliff:g> asu"</string>
     <string name="sim_notification_title" msgid="6839556577405929262">"‏כרטיסי ה-SIM שונו"</string>
     <string name="sim_notification_summary" msgid="5593339846307029991">"יש להקיש כדי להגדיר"</string>
-    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"אני רוצה לאשר בכל פעם"</string>
+    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"אני רוצה לבחור בכל פעם"</string>
     <string name="sim_selection_required_pref" msgid="231437651041498359">"יש לציין בחירה"</string>
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"‏בחירת SIM"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"הגדרות"</string>
